added an under construction statement

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
-<body>
+<head>
 	<title> Carina's Corner </title>
-	
+</head>
+<body>
+	<h1> Meet Carina Corbin </h1>
+
+<p> Welcome to my personal page!  Here you will find my projects, my CV and links to my social media. <br> 
+	My website is still under construction! Thank you for visiting and please return at a later date. </p>
 </body>
 </html>
