--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 </head>
 <body>
 	<h1> Meet Carina Corbin </h1>
+	body{
+	background:
+		url(background.jpg)
+		top center
+		no-repeat
+		fixed
+		padding-box
+		content-box
+		black;
+			}
 
 <p> Welcome to my personal page!  Here you will find my projects, my CV and links to my social media. <br> 
 	My website is still under construction! Thank you for visiting and please return at a later date. </p>
