--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
 	<title> Carina's Corner </title>
 </head>
 <body>
-	<h1> Meet Carina Corbin </h1>
-	body{
+<!-- Site navigation menu -->
+<ul class="navbar">
+  <li><a href="index.html">Home page</a>
+ </ul>
+ <style type="text/css">
+   body{
 	background:
 		url(background.jpg)
 		top center
 		no-repeat
 		fixed
-		padding-box
-		content-box
 		black;
 			}
+		</style>
+	<h1> Meet Carina Corbin </h1>
+
+
+	
 
 <p> Welcome to my personal page!  Here you will find my projects, my CV and links to my social media. <br> 
 	My website is still under construction! Thank you for visiting and please return at a later date. </p>
+
+<address>Made  May 215<br>
+  by Carina Corbin</address>
 </body>
 </html>
