--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 	<title> Carina's Corner </title>
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
 <!-- Site navigation menu -->
