--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-	<title> Carina's Corner </title>
+<title> Carina's Corner </title>
 <link rel="stylesheet" type="text/css" href="mystyle.css">	
 </head>
 <body>
@@ -11,12 +11,14 @@
 <ul class="navbar">
   <li><a href="index.html">Home page</a>
  </ul>
+ <div class="container">
+ <div class="center_div">
 	<h1> Meet Carina Corbin </h1>
-
-
 
 <p> Welcome to my personal page!  Here you will find my projects, my CV and links to my social media. <br> 
 	My website is still under construction! Thank you for visiting and please return at a later date. </p>
+	</div>
+	</div>
 
 <address>Made  May 2015<br>
   by Carina Corbin</address>
