--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="mystyle.css">	
 </head>
 <body>
-
+<div class="body">
 <!-- Site navigation menu -->
 <ul class="navbar">
   <li><a href="index.html">Home page</a>
@@ -22,5 +22,8 @@
 
 <address>Made  May 2015<br>
   by Carina Corbin</address>
+  </li>
+  </ul>
+  </div>
 </body>
 </html>
