Added new element to navigation bar; working with mozilla for backgrounds now because it does not show in Chrome. Figure out how to fix later

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <!-- Site navigation menu -->
 <ul class="navbar">
   <li><a href="index.html">Home page</a>
- </ul>
+  <li><a href = "resume.html"> My CV</a>
+   </ul>
  <div class="container">
  <div class="center_div">
 	<h1> Meet Carina Corbin </h1>
@@ -20,10 +21,6 @@
 	</div>
 	</div>
 
-<address>Made  May 2015<br>
-  by Carina Corbin</address>
-  </li>
-  </ul>
 
 </body>
 </html>
