Changing up the resume layout

--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,7 @@
   <li><a href="index.html">Home page</a>
   <li><a href = "resume.html"> My CV</a>
    </ul>
+  <div class="resume_div">
 	<b>Career Objective</b>
 <p>A position where I can combine my skills in programming and language study</p>
 <br>
@@ -15,7 +16,7 @@
 <p>Amherst College - Amherst MA <br>
 Computer Science and Asian Languages & Civilization  GPA: A-</p>
 <br>
-<b>Work Experience</b>>
+<b>Work Experience</b>
 <p><b>Her Campus Amherst <tab align=right> September 2013-Present</b>
 The campus correspondent and editor of the Amherst College chapter of Her Campus required to edit, write and approve the content on the online magazine.</p>
 <br>
@@ -35,15 +36,15 @@ The campus correspondent and editor of the Amherst College chapter of Her Campus
 <br>
 
 <b>Activities</b>
-<p>Korean Student Association - Member since 2013;  Secretary ( 2014); Vice President (2015)
-Hello Girl! Women in CS - Member since 2014;
+<p>Korean Student Association - Member since 2013;  Secretary ( 2014); Vice President (2015)<br>
+Hello Girl! Women in CS - Member since 2014;<br>
 African and Caribbean Student Union - Member since 2014;</p>
 <br>
 <b>Achievements</b>
-<p>Second place at WeCode Hackathon at Harvard (MommaCoders)- February 2014
-Accepted Poster at IWSDS 2015 - “Creating A Virtual Neighbor” Corbin et. al
+<p>Second place at WeCode Hackathon at Harvard (MommaCoders)- February 2014<br>
+Accepted Poster at IWSDS 2015 - “Creating A Virtual Neighbor” Corbin et. al<br>
 Best Delivery and Style Five College Mandarin Chinese Speaking Contest April 2015</p>
-
+</div>
 
 
 </body>
