Edited resume page

--- a/resume.html
+++ b/resume.html
@@ -11,35 +11,41 @@
   <div class="resume_div">
 	<b>Career Objective</b>
 <p>A position where I can combine my skills in programming and language study</p>
-<br>
+</div><br>
+<div class="resume_div">
 <b>Education</b>
 <p>Amherst College - Amherst MA <br>
 Computer Science and Asian Languages & Civilization  GPA: A-</p>
-<br>
+</div><br>
+<div class="resume_div">
 <b>Work Experience</b>
 <p><b>Her Campus Amherst <tab align=right> September 2013-Present</b>
 The campus correspondent and editor of the Amherst College chapter of Her Campus required to edit, write and approve the content on the online magazine.</p>
-<br>
+</div><br>
+<div class="resume_div">
 <b>Institute of Creative Technologies at USC	<tab align=right>	 	June 2014 - August 2014</b>
 <p>As a summer intern, worked on an independent project in the Natural Language Dialogue Group creating a virtual human directory called the Virtual Neighbor.  Created the design of the system, built the natural language generation by adding novel pieces to an older framework at the company and implemented three different types of input using Java and Python.</p>
-<br>
-
+</div><br>
+<div class="resume_div">
 <b>IT Specialist at Amherst College	<tab align=right>			September 2015-Present</b>
 <p>As an IT Specialist handled student and faculty computer issues whether over the phone and in person.  Primarily software issues and a few hardware problems were resolved.</p>
-<br>
+</div><br>
+<div class="resume_div">
 <b>Programming Skills</b>
 <p>Strong Programming:  Java, Python || Intermediate Programming:  HTML, Javascript, CSS, BML and XML  || Tools: Sublime Text 2, Emacs, Eclipse</p>
-<br>
- 
+</div><br>
+ <div class="resume_div">
 <b>Language Skills</b>
 <p>Fluent: English ||  Conversational: Mandarin Chinese || Elementary:  Korean</p>
-<br>
+</div><br>
 
+<div class="resume_div">
 <b>Activities</b>
 <p>Korean Student Association - Member since 2013;  Secretary ( 2014); Vice President (2015)<br>
 Hello Girl! Women in CS - Member since 2014;<br>
 African and Caribbean Student Union - Member since 2014;</p>
-<br>
+</div><br>
+<div class="resume_div">
 <b>Achievements</b>
 <p>Second place at WeCode Hackathon at Harvard (MommaCoders)- February 2014<br>
 Accepted Poster at IWSDS 2015 - “Creating A Virtual Neighbor” Corbin et. al<br>
