Changing up the resume layout

--- a/resume.html
+++ b/resume.html
@@ -19,8 +19,8 @@ Computer Science and Asian Languages & Civilization  GPA: A-</p>
 </div><br>
 <div class="resume_div">
 <b>Work Experience</b>
-<p><b><i>Her Campus Amherst <tab align=right> September 2013-Present</i></b>
-The campus correspondent and editor of the Amherst College chapter of Her Campus required to edit, write and approve the content on the online magazine.</p>
+<br><b><i>Her Campus Amherst <tab align=right> September 2013-Present</i></b>
+<p>The campus correspondent and editor of the Amherst College chapter of Her Campus required to edit, write and approve the content on the online magazine.</p>
 <br>
 
 <b><i>Institute of Creative Technologies at USC	<tab align=right>	 	June 2014 - August 2014</i></b>
