Changes made to website homepage and resume

--- a/resume.html
+++ b/resume.html
@@ -18,17 +18,18 @@
 Computer Science and Asian Languages & Civilization  GPA: A-</p>
 </div><br>
 <div class="resume_div">
-<b>Work Experience</b>
+<b>Work Experience</b><br>
 <br><b><i>Her Campus Amherst <tab align=right> September 2013-Present</i></b>
 <p>The campus correspondent and editor of the Amherst College chapter of Her Campus required to edit, write and approve the content on the online magazine.</p>
 <br>
-
-<b><i>Institute of Creative Technologies at USC	<tab align=right>	 	June 2014 - August 2014</i></b>
-<p>As a summer intern, worked on an independent project in the Natural Language Dialogue Group creating a virtual human directory called the Virtual Neighbor.  Created the design of the system, built the natural language generation by adding novel pieces to an older framework at the company and implemented three different types of input using Java and Python.</p>
-<br>
-
 <b><i>IT Specialist at Amherst College	<tab align=right>			September 2015-Present</i></b>
 <p>As an IT Specialist handled student and faculty computer issues whether over the phone and in person.  Primarily software issues and a few hardware problems were resolved.</p>
+<br>
+<b><i>Institute of Creative Technologies at USC	<tab align=right>	 	June 2014 - August 2014</i></b>
+<p>As a summer intern, worked on an independent project in the Natural Language Dialogue Group creating a virtual human directory called the Virtual Neighbor.  Created the design of the system, built the natural language generation by adding novel pieces to an older framework at the company and implemented three different types of input using Java and Python.</p>
+
+
+
 </div><br>
 <div class="resume_div">
 <b>Programming Skills</b>
