--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 	<h1> Meet Carina Corbin </h1>
 
 <p> Welcome to my personal page!  Here you will find my projects, my CV and links to my social media. <br> 
-	My website is still under construction! Thank you for visiting and please return at a later date. </p>
-	</div>
+</p></div>
+	
+
+<p>My website is still under construction! Thank you for visiting and please return at a later date. </p>
+	
 	</div>
 
 
