--- a/index.html
+++ b/index.html
@@ -19,10 +19,22 @@
 <p> Welcome to my personal page!  Here you will find my projects, my CV and links to my social media. <br> 
 </p></div>
 	
+<div class="bio_div">
+<b>My Biography</b> <br> <br>
+<p>I am a Computer Science and Asian Language and Civilization double major. It's another way of saying that when I grow up I want to be a software engineer and a polyglot.  I creating technology and I love to talk to every person I meet and these majors help me combine my two loves into a dream career.  I know in the end I want to work for a computer science company where I play a role in creating technology and marketing that same technology in East Asia.  I don't know the path that will get me there, but every decision I make brings me closer to my goal.</p>
+<br>
+<br>
 
-<p>My website is still under construction! Thank you for visiting and please return at a later date. </p>
-	
-	</div>
+<b> How I Got Here </b>
+<p>You may wonder how I got decided that this was my ideal path.  From a young age, I grew great interest in East Asian culture. It began with Japan and my love for manga and anime.  When I got to high school, during my senior year, I was trying to find myself.  I decided I didn't want to go to medical school, the academic path I chose in high school and was looking for somethiing new.  I started to learn Mandarin Chinese (the only non-Asian in the class) and realized I had a knack for learning languages (I was still studying Level 4 Spanish at the time).  That summer, I taught myself to code and realized it was something cool and innovative. When I got to Amherst I took many Computer Science courses including Computer Systems and Data Structures and Algorithms.  I also continued to study Mandarin Chinese and started Korean. I realized that turning these interests into skills sets I could change the business world and that's what I want to do.</p>
+
+<br> <br>
+<b> My Relevance To The Tech Community </b>
+<p>In January 2015, I attended a conference in South Korea. It was a tremendous opportunity to present a poster presentation of my paper that I will never forget. However, though the conference was in South Korea, everyone spoke English.  Because of the distance, most presenters were from Japan or China which meant that English was not their first languages (sometime third or fourth!)  My Korean level is not high enough to describe technical terms to Koreans but I definitely used Mandarin when I could to describe my project to Mandarin speakers.  It's remarkable how connecting with someone in their native tongue can make them more interested in your product. I want to do that for tech companies.  I want to build software and sell to people all around the world.  With English as my mother tongue and my studies in Mandarin Chinese, Korean and Spanish, I can explain the software I build to billions of people.  As our world gets smaller, our engineers have to get smarter and more conversational.  That is my goal.</p>
+  
+
+</div>
+</div>
 
 
 </body>
