Editing bio on homepage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <title> Carina's Corner </title>
+<link rel="shortcut icon" type="image/x-icon" href="me.jpg" />
 <link rel="stylesheet" type="text/css" href="mystyle.css">	
 </head>
 <body>
