--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,5 @@
 <title> Carina's Curriculum Vitae </title>
+<link rel="shortcut icon" type="image/x-icon" href="me.jpg" />
 <link rel="stylesheet" type="text/css" href="mystyle.css">	
 </head>
 <body>
