Changing up the resume layout

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
    </ul>
  <div class="container">
  <div class="center_div">
-	<h1> Meet Carina Corbin </h1>
+	<h1> Carina Corbin </h1>
 
-<p> Welcome to my personal page!  Here you will find my projects, my CV and links to my social media. <br> 
+<p> Welcome to my personal page!  Here you will find my personal statement, my CV and links to my social media. <br> 
 </p></div>
 	
 <div class="bio_div"><br> <br>
