Added home and resume icons

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <!-- Site navigation menu -->
 <ul class="navbar">
-  <li><a href="index.html">Home page</a>
-  <li><a href = "resume.html"> My CV</a>
+<a href="index.html"><img src="home.png" height="42" width="42"></a> 
+<a href="resume.html"><img src="resume.png" height="42" width="42"></a> 
+
    </ul>
  <div class="container">
  <div class="center_div">
