--- a/index.html
+++ b/index.html
@@ -29,12 +29,17 @@
 <br>
 <br>
 
-<b> How I Got Here </b>
-<p>You may wonder how I got decided that this was my ideal path.  From a young age, I grew great interest in East Asian culture. It began with Japan and my love for manga and anime.  When I got to high school, during my senior year, I was trying to find myself.  I decided I didn't want to go to medical school, the academic path I chose in high school and was looking for somethiing new.  I started to learn Mandarin Chinese (the only non-Asian in the class) and realized I had a knack for learning languages (I was still studying Level 4 Spanish at the time).  That summer, I taught myself to code and realized it was something cool and innovative. When I got to Amherst I took many Computer Science courses including Computer Systems and Data Structures and Algorithms.  I also continued to study Mandarin Chinese and started Korean. I realized that turning these interests into skills sets I could change the business world and that's what I want to do.</p>
+
+<b> Future Career Goals </b>
+<img src="thefuture.jpg" alt="My face" height="52" width="52">
+<p>"A marketing technologist is a technically skilled person who designs and operates technology solutions in the service of marketing. This isn’t just about embedding IT services within marketing, though. Good marketing technologists strive to understand the context of the technology. They’re passionate about reimagining what marketing can do in a digital world." -Scott Brinker<br>
+
+ A marketing technologist is a fairly new position but I believe it will have great relevance as every business must implement various types of technology to stay relevant in this technological world.  I also believe that marketing technologists in the United States will need to appeal to foreign markets in order to make brands more international.  Countries like China and South Korea, my concentrations in culture study, are great consumers that with the right advertising find that United States products can work for them.  As I learn more about how technology works and these two East Asian cultures, I hope to become the marketing technologist that all businesses need in the near future</p>
 
 <br> <br>
-<b> My Relevance To The Tech Community </b>
-<p>In January 2015, I attended a conference in South Korea. It was a tremendous opportunity to present a poster presentation of my paper that I will never forget. However, though the conference was in South Korea, everyone spoke English.  Because of the distance, most presenters were from Japan or China which meant that English was not their first languages (some times third or fourth!)  My Korean level was not yet high enough to describe technical terms but I definitely used Mandarin when I could to describe my project to Mandarin speakers.  It's remarkable how connecting with someone in their native tongue can make them more interested in your product. I want to do that for tech companies.  I want to build software and sell to people all around the world.  With English as my mother tongue and my studies in Mandarin Chinese, Korean and Spanish, I can explain the software I build to billions of people.  As our world gets smaller, our engineers have to get smarter and more conversational.  That is my goal.</p>
+<b> Right Now </b>
+<img src="Today.jpg" alt="My face" height="52" width="52">
+<p> I am looking for different opportunities and careers to build my knowledge in both marketing, software development and big data.  My father always told me that everything is a learning experience.  Every job I work for, every paper that I write, every program that I make...know I put my all into that in hopes of becoming a better person and doing the best work possible</p>
 <br>
 <br>
 <a href="https://www.linkedin.com/pub/carina-corbin/b2/728/bab"><img src="linkedin-icon.png" height="42" width="42"></a> 
