--- a/resume.html
+++ b/resume.html
@@ -6,8 +6,7 @@
 
 <!-- Site navigation menu -->
 <ul class="navbar">
-  <li><a href="index.html">Home page</a>
-  <li><a href = "resume.html"> My CV</a>
+<a href="index.html"><img src="home.png" height="42" width="42"></a> 
    </ul>
   <div class="resume_div">
 	<b>Career Objective</b>
