--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 <br>
 
 
-<b> Future Career Goals </b>
+<b> Future Career Goals </b> <br>
 <img src="thefuture.jpg" alt="My face" height="52" width="52">
-<p>"A marketing technologist is a technically skilled person who designs and operates technology solutions in the service of marketing. This isn’t just about embedding IT services within marketing, though. Good marketing technologists strive to understand the context of the technology. They’re passionate about reimagining what marketing can do in a digital world." -Scott Brinker<br>
+<p>"A marketing technologist is a technically skilled person who designs and operates technology solutions in the service of marketing. This isn’t just about embedding IT services within marketing, though. Good marketing technologists strive to understand the context of the technology. They’re passionate about reimagining what marketing can do in a digital world." <br>-Scott Brinker<br>
 
  A marketing technologist is a fairly new position but I believe it will have great relevance as every business must implement various types of technology to stay relevant in this technological world.  I also believe that marketing technologists in the United States will need to appeal to foreign markets in order to make brands more international.  Countries like China and South Korea, my concentrations in culture study, are great consumers that with the right advertising find that United States products can work for them.  As I learn more about how technology works and these two East Asian cultures, I hope to become the marketing technologist that all businesses need in the near future</p>
 
 <br> <br>
-<b> Right Now </b>
+<b> Right Now </b> <br>
 <img src="Today.jpg" alt="My face" height="52" width="52">
 <p> I am looking for different opportunities and careers to build my knowledge in both marketing, software development and big data.  My father always told me that everything is a learning experience.  Every job I work for, every paper that I write, every program that I make...know I put my all into that in hopes of becoming a better person and doing the best work possible</p>
 <br>
