--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <b>My Biography</b> <br> 
 <img src="me.jpg" alt="My face" height="42" width="42">
 <br>
-<p>I am a Computer Science and Asian Language and Civilization double major. It's another way of saying that when I grow up I want to be a software engineer and a polyglot.  I love creating technology and I love to talk to every person I meet and these majors help me combine my two loves into a dream career.  I know in the end I want to work for a technology company where I play a role in creating technology and marketing that same technology in East Asia.  I don't know the path that will get me there, but every decision I make brings me closer to my goal.</p>
+<p>I am a Computer Science and Asian Language and Civilization double major. It's another way of saying that when I grow up I want to be a software engineer and a polyglot.  I love creating technology and I love to talk to every person I meet and these majors help me combine my two loves into a dream career.</p>
 <br>
 <br>
 
