--- a/index.html
+++ b/index.html
@@ -22,29 +22,20 @@
 </p></div>
 	
 <div class="bio_div"><br> <br>
-<b>My Biography</b> <br> 
+<b>What I Love</b> <br> 
 <img src="me.jpg" alt="My face" height="42" width="42">
 <br>
-<p>I am a Computer Science and Asian Language and Civilization double major. It's another way of saying that when I grow up I want to be a software engineer and a polyglot.  I love creating technology and I love to talk to every person I meet and these majors help me combine my two loves into a dream career.</p>
+<p>From a young age, I enjoyed learning languages, writing and working with my computer.  I never imagined that my interests would become my college majors in the future.  My senior year of high school was a huge turning point in my life.  I taught myself how to code, I was the only non-Asian person to take level one Mandarin Chinese and I started a short story blog that when I closed it for college had over 1200 followers.  None of the things I loved to do are easy for me to accomplish.  Coding is difficult, Chinese is difficult, Writing is difficult, but he challenges inspire me to keep moving.  Now, I am hoping to start learning data science, I am working on improving my language skills in Mandarin, Korean and Spanish and I am the co-editor for the Amherst College chapter of online magazine, Her Campus.   </p>
 <br>
 <br>
-
-
-<b> Future Career Goals </b> <br>
-<img src="thefuture.jpg" alt="My face" height="62" width="62">
-<p>"A marketing technologist is a technically skilled person who designs and operates technology solutions in the service of marketing. This isn’t just about embedding IT services within marketing, though. Good marketing technologists strive to understand the context of the technology. They’re passionate about reimagining what marketing can do in a digital world." <br>-Scott Brinker<br>
-
- A marketing technologist is a fairly new position and often referred to as a "unicorn" profession because of the few people who choose to pursue it. I want to be one of these unicorns. I believe that marketing technologists in the United States will need to appeal to foreign markets in order to make brands more international.  Countries like China and South Korea, my concentrations in culture study, are great consumers that with the right advertising could find that United States products can work for them.  As I learn more about how technology works and these two East Asian cultures, I hope to become the marketing technologist that businesses need in the near future</p>
-
-<br> <br>
-<b> Right Now </b> <br>
+<b> Career Objective</b> <br>
 <img src="Today.jpg" alt="My face" height="62" width="62">
-<p> I am looking for different opportunities and careers to build my knowledge in marketing, software development and big data.  My father always told me that everything is a learning experience.  Every job I work for, every paper that I write, every program that I make...know I put my all into that in hopes of becoming a better person and doing the best work possible.</p>
+<p> A position where I can combine my love of tech, marketing and international relations</p>
 <br>
 <br>
 <a href="https://www.linkedin.com/pub/carina-corbin/b2/728/bab"><img src="linkedin-icon.png" height="42" width="42"></a> 
 <a href="https://github.com/ccorbin17"><img src="github-icon.png" height="42" width="42"></a> 
-<a href="https://github.com/ccorbin17"><img src="alliance.png" height="42" width="42"></a> 
+<a href="http://blog.allianceglobaled.org/author?aid=135"><img src="alliance.png" height="42" width="42"></a> 
 </div>
 </div>
 
