--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,10 @@ Computer Science and Asian Languages & Civilization  GPA: A-</p>
 <p>The campus correspondent and editor of the Amherst College chapter of Her Campus required to edit, write and approve the content on the online magazine.</p>
 <br>
 <b><i>IT Specialist at Amherst College	<tab align=right>			September 2015-Present</i></b>
-<p>As an IT Specialist handled student and faculty computer issues whether over the phone and in person.  Primarily software issues and a few hardware problems were resolved.</p>
+<p>As an IT Specialist handled student and faculty computer issues both over the phone and in person.  Primarily software issues and a few hardware problems were resolved.</p>
+<br>
+<b><i>EventBank (Beijing, China)	<tab align=right>				June 2015-August 2015 </i></b>
+<p>As a summer intern, worked in the back-end of the software development group primarily on the company’s email templates.  Verified proper translation in both Mandarin and English.. Fixed various system errors in order to help complete back-end team daily schedule.   Primarily used Scala, Play, and MongoDB</p>
 <br>
 <b><i>Institute of Creative Technologies at USC	<tab align=right>	 	June 2014 - August 2014</i></b>
 <p>As a summer intern, worked on an independent project in the Natural Language Dialogue Group creating a virtual human directory called the Virtual Neighbor.  Created the design of the system, built the natural language generation by adding novel pieces to an older framework at the company and implemented three different types of input using Java and Python.</p>
@@ -33,11 +36,11 @@ Computer Science and Asian Languages & Civilization  GPA: A-</p>
 </div><br>
 <div class="resume_div">
 <b>Programming Skills</b>
-<p>Strong Programming:  Java, Python || Intermediate Programming:  HTML, Javascript, CSS, BML and XML  || Tools: Sublime Text 2, Emacs, Eclipse</p>
+<p>Strong:  Java, Python || Intermediate:  HTML, CSS, Javascript, BML and XML, Scala  || Tools: Sublime Text 2, Emacs, Eclipse</p>
 </div><br>
  <div class="resume_div">
 <b>Language Skills</b>
-<p>Fluent: English ||  Conversational: Mandarin Chinese || Elementary:  Korean</p>
+<p>Fluent: English ||  Conversational: Mandarin Chinese || Intermediate:  Korean, Spanish</p>
 </div><br>
 
 <div class="resume_div">
@@ -50,7 +53,9 @@ African and Caribbean Student Union - Member since 2014;</p>
 <b>Achievements</b>
 <p>Second place at WeCode Hackathon at Harvard (MommaCoders)- February 2014<br>
 Accepted Poster at IWSDS 2015 - “Creating A Virtual Neighbor” Corbin et. al<br>
-Best Delivery and Style Five College Mandarin Chinese Speaking Contest April 2015</p>
+Published Paper in Natural Language Dialog Systems and Intelligent Assistants - “Creating A Virtual Neighbor”<br>
+Best Delivery and Style Five College Mandarin Chinese Speaking Contest April 2015<br>
+Alliance for Global Education Beijing - Featured Blogger of the Month  August 2015</p>
 </div>
 
 
