Added a clause about state of website
This website is only for practicing HTML/CSS.  Depending on when it is accessed it could be beautiful or a complete mess.  It's a scratch pad I work on when I'm bored or just want to practice new techniques.  However, the information is valuable for those wanting to know a little more about me.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,21 @@
 	
 <div class="bio_div"><br> <br>
 
+	<h1> Hi There! </h1>
+	<b> Welcome to my github webpage!</b>  
+	This webpage was created to practice my CSS/HTML skills, so a lot of the information will be outdated
+	Here are a few things that will never change
+	<li>
+		<ul> I started coding when I wanted to edit my Yahoo webpage in 3rd grade and Tumblr in high school.  </ul>
+		<ul> Because of this, web design has always been the most therapeutic coding for me and will probably won't pursue it professionally  </ul>
+		<ul> The transition to backend was not easy. I learned while pursuing my college degree that natural talent is nice, but <i> practice </i> is the key to success  </ul>
+		<ul> Outside of coding languages: I also study Mandarin Chinese and Korean.  I also speak some Spanish ^^ </ul>
+		<ul> Other things that make me happy: story-telling (written and verbal), listening to music, dancing, trying new foods and making people smile </ul>
+		
+	</li>
 <b> Career Objective</b> <br>
 <img src="Today.jpg" alt="My face" height="62" width="62">
-<p> A position where I can combine my love of tech, marketing and international relations</p>
+<p> A position where I can combine my love of tech and learning languages</p>
 <br>
 <br>
 <a href="https://www.linkedin.com/pub/carina-corbin/b2/728/bab"><img src="linkedin-icon.png" height="42" width="42"></a> 
