issue with bullets

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 	<b> Welcome to my github webpage!</b>  
 	This webpage was created to practice my CSS/HTML skills, so a lot of the information will be outdated
 	Here are a few things that will never change
-	<li>
-		<ul> I started coding when I wanted to edit my Yahoo webpage in 3rd grade and Tumblr in high school.  </ul>
-		<ul> Because of this, web design has always been the most therapeutic coding for me and will probably won't pursue it professionally  </ul>
+	<li> <ul> I started coding when I wanted to edit my Yahoo webpage in 3rd grade and Tumblr in high school.  </ul>
+	<li> <ul> Because of this, web design has always been the most therapeutic coding for me and will probably won't pursue it professionally  </ul> </li>>
 		<ul> The transition to backend was not easy. I learned while pursuing my college degree that natural talent is nice, but <i> practice </i> is the key to success  </ul>
 		<ul> Outside of coding languages: I also study Mandarin Chinese and Korean.  I also speak some Spanish ^^ </ul>
 		<ul> Other things that make me happy: story-telling (written and verbal), listening to music, dancing, trying new foods and making people smile </ul>
