--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 	
 <div class="bio_div"><br> <br>
 
-	<h1> Hi There! </h1>
+	<h1> Hi There! </h1> <br>
 	<b> Welcome to my github webpage!</b>  
 	This webpage was created to practice my CSS/HTML skills, so a lot of the information will be outdated
 	Here are a few things that will never change
-	<li> <ul> I started coding when I wanted to edit my Yahoo webpage in 3rd grade and Tumblr in high school.  </ul>
-	<li> <ul> Because of this, web design has always been the most therapeutic coding for me and will probably won't pursue it professionally  </ul> </li>>
-		<ul> The transition to backend was not easy. I learned while pursuing my college degree that natural talent is nice, but <i> practice </i> is the key to success  </ul>
-		<ul> Outside of coding languages: I also study Mandarin Chinese and Korean.  I also speak some Spanish ^^ </ul>
-		<ul> Other things that make me happy: story-telling (written and verbal), listening to music, dancing, trying new foods and making people smile </ul>
+	<li> I started coding when I wanted to edit my Yahoo webpage in 3rd grade and Tumblr in high school.  
+	<li>  Because of this, web design has always been the most therapeutic coding for me and will probably won't pursue it professionally   </li>
+		<li> The transition to backend was not easy. I learned while pursuing my college degree that natural talent is nice, but <i> practice </i> is the key to success  </li>
+		<li> Outside of coding languages: I also study Mandarin Chinese and Korean.  I also speak some Spanish ^^ </li>
+		<li> Other things that make me happy: story-telling (written and verbal), listening to music, dancing, trying new foods and making people smile </li>
 		
 	</li>
 <b> Career Objective</b> <br>
