--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<center> This webpage was created to practice my CSS/HTML skills, so a lot of the information will be outdated
 		Here are a few things that will never change: </center> <br>
 	
-	<img src="me.jpg"> <br>
+	<div align="left"> <img src="me.jpg" style="width:300px;height:228px;">  </div> <br>
 	
 	<div align="right"> <li> I started coding when I wanted to edit my Yahoo webpage in 3rd grade and Tumblr in high school.  
 	<li>  Because of this, web design has always been the most therapeutic coding for me and will probably won't pursue it professionally   </li>
