changed right align for aesthetic

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	
 	<div align="left"> <img src="me.jpg" style="width:300px;height:228px;">  </div> <br>
 	
-	<div align="right"> <li> I started coding when I wanted to edit my Yahoo webpage in 3rd grade and Tumblr in high school.  
+	<div> <li> I started coding when I wanted to edit my Yahoo webpage in 3rd grade and Tumblr in high school.  
 	<li>  Because of this, web design has always been the most therapeutic coding for me and will probably won't pursue it professionally   </li>
 		<li> The transition to backend was not easy. I learned while pursuing my college degree that natural talent is nice, but <i> practice </i> is the key to success  </li>
 		<li> Outside of coding languages: I also study Mandarin Chinese and Korean.  I also speak some Spanish ^^ </li>
