--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		Here are a few things that will never change: </center> <br>
 
 	
-<div class="About Me">
+<div class="clearfix aboutme">
 <img src="me.jpg" width=300>
 	<div>
 	<li> I started coding when I wanted to edit my Yahoo webpage in 3rd grade and Tumblr in high school.  
