issue with google chrome opening

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 	<h1> Hi There! </h1> <br>
 	<b> Welcome to my github webpage!</b>  <br>
 	
-	<center> This webpage was created to practice my CSS/HTML skills, so a lot of the information will be outdated
+	<center> This webpage was created to practice my CSS/HTML skills (speaking of which please open in Mozilla for now!), so a lot of the information will be outdated
 		Here are a few things that will never change: </center> <br>
 
 	
-<div class="clearfix aboutme">
+
 <img src="me.jpg" width=300>
 	<div>
 	<li> I started coding when I wanted to edit my Yahoo webpage in 3rd grade and Tumblr in high school.  
@@ -38,8 +38,6 @@
 	<li> The transition to backend was not easy. I learned while pursuing my college degree that natural talent is nice, but <i> practice </i> is the key to success  </li>
 	<li> Outside of coding languages: I also study Mandarin Chinese and Korean.  I also speak some Spanish ^^ </li>
 	<li> Other things that make me happy: story-telling (written and verbal), listening to music, dancing, trying new foods and making people smile </li>
-		
-		</div>
    
 </div>
 
