--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<h1> Hi There! </h1> <br>
 	<b> Welcome to my github webpage!</b>  <br>
 	
-	<center> This webpage was created to practice my CSS/HTML skills (speaking of which please open in Mozilla for now!), so a lot of the information will be outdated
+	<center> This webpage was created to practice my CSS/HTML skills, so a lot of the information will be outdated
 		Here are a few things that will never change: </center> <br>
 
 	
