--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <title>Carina Corbin/title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 
 
