--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1>Carina Corbin</h1>
 <p><strong>carinabcorbin@gmail.com</strong></p>
 </div>
-<div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="internships.html">Internships</a> <a href="fulltime.html">Full Time</a> <a href="interests.html">Interests and Links</a></div>
+<div id="navigation"><a href="index.html">About</a></div>
 <div class="innerbox">
 	<p>My name is Carina Corbin and I am currently pursuing in Master's of Engineering in Computer Science at Cornell Tech </p>
 	<br>
