--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 <body>
-<div class="box"><img style="float: left; padding: 28px 50px 10px 50px;" src="images/nicki.jpg" alt="" height="200px" />
+<div class="box"><img style="float: left; padding: 28px 50px 10px 50px;" src="images/me.jpg" alt="" height="200px" />
 <div style="margin: 30px;">
 <h1>Carina Corbin</h1>
 <p><strong>carinabcorbin@gmail.com</strong></p>
