--- a/index.html
+++ b/index.html
@@ -1,28 +1,54 @@
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-
-<title>Carina Corbin/title>
+<title> Carina's Corner </title>
+<link rel="shortcut icon" type="image/x-icon" href="me.jpg" />
+<link rel="stylesheet" type="text/css" href="mystyle.css">	
 </head>
-
-<link rel="stylesheet" type="text/css" href="mystyle.css">
-
-
 <body>
-<div class="box"><img style="float: left; padding: 28px 50px 10px 50px;" src="images/me.jpg" alt="" height="200px" />
-<div style="margin: 30px;">
-<h1>Carina Corbin</h1>
-<p><strong>carinabcorbin@gmail.com</strong></p>
-</div>
-<div id="navigation"><a href="index.html">About</a></div>
-<div class="innerbox">
-	<p>My name is Carina Corbin and I am currently pursuing in Master's of Engineering in Computer Science at Cornell Tech </p>
-	<br>
-	<p> Prior to Cornell, I worked in client-facing software development roles full-time at Avanade and Palantir.  During my undergraduate degree at Amherst, I held software engineering internships in virtual reality research, SaaS, and investmant banking. </p>
-        <br>
-	<p> My passion is building user-centric software.  Whether using Java or Pyspark, speaking English or Mandarin, I do my best to break down difficult problems and create technical solutoins. </p<
-	</div>
-</div>
-</body>
 
+<!-- Site navigation menu -->
+<ul class="navbar">
+<a href="index.html"><img src="home.png" height="42" width="42"></a> 
+<a href="resume.html"><img src="resume.png" height="42" width="42"></a> 
+
+   </ul>
+ <div class="container">
+ <div class="center_div">
+	<h1> Carina Corbin </h1>
+
+<p> Welcome to my personal page for GitHub.  The CV has not been updated.  Please contact me for more information  <br> 
+</p></div>
+	
+<div class="bio_div"><br> <br>
+
+	<h1> Hi There! </h1> <br>
+	<b> Welcome to my github webpage!</b>  <br>
+	
+	<center> This webpage was created to practice my CSS/HTML skills, so a lot of the information will be outdated
+		Here are a few things that will never change: </center> <br>
+
+	
+
+<img src="me.jpg" width=300>
+	<div>
+	<li> I started coding when I wanted to edit my Yahoo webpage in 3rd grade and Tumblr in high school.  
+	<li>  Because of this, web design has always been the most therapeutic coding for me and I probably won't pursue it professionally   </li>
+	<li> The transition to backend was not easy. I learned while pursuing my college degree that natural talent is nice, but <i> practice </i> is the key to success  </li>
+	<li> Outside of coding languages: I also study Mandarin Chinese and Korean.  I also speak some Spanish ^^ </li>
+	<li> Other things that make me happy: story-telling (written and verbal), listening to music, dancing, trying new foods and making people smile </li>
+   
+</div>
+
+
+<br>
+<br>
+<a href="https://www.linkedin.com/pub/carina-corbin/b2/728/bab"><img src="linkedin-icon.png" height="42" width="42"></a> 
+<a href="https://github.com/ccorbin17"><img src="github-icon.png" height="42" width="42"></a> 
+<a href="http://blog.allianceglobaled.org/author?aid=135"><img src="alliance.png" height="42" width="42"></a> 
+
+</div>
+
+
+</body>
 </html>
