--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
  <div class="container">
  <div class="center_div">
 	<h1> Carina Corbin </h1>
-
-<p> Welcome to my personal page for GitHub.  The CV has not been updated.  Please contact me for more information  <br> 
-</p></div>
+	 <p> carinabcorbin (at) gmail.com </p> <br> 
+</div>
 	
 <div class="bio_div"><br> <br>
 
