--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
  <div class="container">
  <div class="center_div">
 	<h1> Carina Corbin </h1>
+	 <p> Master's of Engineering Student at Cornell Tech, Class of 2021 </p>
 	 <p> carinabcorbin (at) gmail.com </p> <br> 
 </div>
 	
@@ -39,7 +40,13 @@
    
 </div>
 
-
+<div class="innerbox">
+	<p>My name is Carina Corbin and I am currently pursuing in Master's of Engineering in Computer Science at Cornell Tech </p>
+	<br>
+	<p> Prior to Cornell, I worked in client-facing software development roles full-time at Avanade and Palantir.  During my undergraduate degree at Amherst, I held software engineering internships in virtual reality research, SaaS, and investmant banking. </p>
+        <br>
+	<p> My passion is building user-centric software.  Whether using Java or Pyspark, speaking English or Mandarin, I do my best to break down difficult problems and create technical solutoins. </p<
+</div>
 <br>
 <br>
 <a href="https://www.linkedin.com/pub/carina-corbin/b2/728/bab"><img src="linkedin-icon.png" height="42" width="42"></a> 
