--- a/index.html
+++ b/index.html
@@ -7,39 +7,14 @@
 </head>
 <body>
 
-<!-- Site navigation menu -->
-<ul class="navbar">
-<a href="index.html"><img src="home.png" height="42" width="42"></a> 
-<a href="resume.html"><img src="resume.png" height="42" width="42"></a> 
-
-   </ul>
  <div class="container">
  <div class="center_div">
 	<h1> Carina Corbin </h1>
 	 <p> Master's of Engineering Student at Cornell Tech, Class of 2021 </p>
 	 <p> carinabcorbin (at) gmail.com </p> <br> 
 </div>
+<div id="navigation"><a href="index.html">About</a> <a href="resume.html">Resume</a> </div>		 
 	
-<div class="bio_div"><br> <br>
-
-	<h1> Hi There! </h1> <br>
-	<b> Welcome to my github webpage!</b>  <br>
-	
-	<center> This webpage was created to practice my CSS/HTML skills, so a lot of the information will be outdated
-		Here are a few things that will never change: </center> <br>
-
-	
-
-<img src="me.jpg" width=300>
-	<div>
-	<li> I started coding when I wanted to edit my Yahoo webpage in 3rd grade and Tumblr in high school.  
-	<li>  Because of this, web design has always been the most therapeutic coding for me and I probably won't pursue it professionally   </li>
-	<li> The transition to backend was not easy. I learned while pursuing my college degree that natural talent is nice, but <i> practice </i> is the key to success  </li>
-	<li> Outside of coding languages: I also study Mandarin Chinese and Korean.  I also speak some Spanish ^^ </li>
-	<li> Other things that make me happy: story-telling (written and verbal), listening to music, dancing, trying new foods and making people smile </li>
-   
-</div>
-
 <div class="innerbox">
 	<p>My name is Carina Corbin and I am currently pursuing in Master's of Engineering in Computer Science at Cornell Tech </p>
 	<br>
