--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
- <div class="container">
- <div class="center_div">
+<div class="box"><img style="float: left; padding: 28px 50px 10px 50px;" src="images/me.jpg" alt="" height="200px" />
+<div style="margin: 30px;">
 	<h1> Carina Corbin </h1>
 	 <p> Master's of Engineering Student at Cornell Tech, Class of 2021 </p>
 	 <p> carinabcorbin (at) gmail.com </p> <br> 
@@ -17,9 +17,7 @@
 	
 <div class="innerbox">
 	<p>My name is Carina Corbin and I am currently pursuing in Master's of Engineering in Computer Science at Cornell Tech </p>
-	<br>
 	<p> Prior to Cornell, I worked in client-facing software development roles full-time at Avanade and Palantir.  During my undergraduate degree at Amherst, I held software engineering internships in virtual reality research, SaaS, and investmant banking. </p>
-        <br>
 	<p> My passion is building user-centric software.  Whether using Java or Pyspark, speaking English or Mandarin, I do my best to break down difficult problems and create technical solutoins. </p<
 </div>
 <br>
