--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 <div id="navigation"><a href="index.html">About</a> <a href="resume.html">Resume</a> </div>		 
 	
 <div class="innerbox">
-	<p>My name is Carina Corbin and I am currently pursuing in Master's of Engineering in Computer Science at Cornell Tech 
-	 Prior to Cornell, I worked in client-facing software development roles full-time at Avanade and Palantir.  During my undergraduate degree at Amherst, I held software engineering internships in virtual reality research, SaaS, and investmant banking. 
-	 My passion is building user-centric software.  Whether using Java or Pyspark, speaking English or Mandarin, I do my best to break down difficult problems and create technical solutions. 
+	<p>Welcome to my website! Please explore to learn more about me through my education and my work experience. </p>
+	<br>
+	 <p> Prior to Cornell, I worked in client-facing software development roles full-time at Avanade and Palantir.  During my undergraduate degree at Amherst, I held software engineering internships in virtual reality research, SaaS, and investmant banking. 
+	 <br>My passion is building user-centric software.  Whether using Java or Pyspark, speaking English or Mandarin, I do my best to break down difficult problems and create technical solutions. 
 	</p>
 	</div>
 </body>
