--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	 <p> Master's of Engineering Student at Cornell Tech, Class of 2021 </p>
 	 <p> carinabcorbin (at) gmail.com </p>
 </div>
-<div id="navigation"><a href="index.html">About</a> <a href="resume.html">Resume</a> </div>		 
+<div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="internship.html">Internships</a><a href="fulltime.html">Full Time</a><a href="interests.html">Interests and Links</a>    </div>		 
 	
 <div class="innerbox">
 	<p>Welcome to my website! Please explore to learn more about me through my education and my work experience. </p>
