--- a/education.html
+++ b/education.html
@@ -13,8 +13,7 @@
 	 <p> Master's of Engineering Student at Cornell Tech, Class of 2021 </p>
 	 <p> carinabcorbin (at) gmail.com </p>
 </div>
-<div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="internship.html">Internships</a><a href="fulltime.html">Full Time</a><a href="interests.html">Interests and Links</a>    </div>		 
-	
+<div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="work.html">Work Experience</a> <a href="interests.html">Interests</a></div>
 <div class="innerbox">
 <div class="row">
   <div class="column"> 
