--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div class="box"><img style="float: left; padding: 28px 50px 10px 50px;" src="profile.jpg" alt="" height="150px" />
+<div class="box"><img style="float: left; padding: 28px 50px 10px 50px;" src="profile.jpg" alt="" height="100px" />
 <div style="margin: 30px;">
 	<h1> Carina Corbin </h1>
 	 <p> Master's of Engineering Student at Cornell Tech, Class of 2021 </p>
@@ -17,10 +17,12 @@
 	
 <div class="innerbox">
 	<p>Welcome to my website! </p>
-	<br>
-	 <p> I am currently pursuing a Master's of Engineering in Computer Science at Cornell Tech. Prior to Cornell, I worked in client-facing software development roles full-time at Avanade and Palantir.  During my undergraduate degree at Amherst, I held software engineering internships in virtual reality research, SaaS, and investmant banking. 
-	 <br>My passion is building user-centric software.  Whether using Java or Pyspark, speaking English or Mandarin, I do my best to break down difficult problems and create technical solutions. 
-	</p>
+	<ul style="list-style-type:none;">
+	  <li> I am currently pursuing a Master's of Engineering in Computer Science at Cornell Tech. Prior to Cornell, I worked in client-facing software development roles full-time at Avanade and Palantir.  During my undergraduate degree at Amherst, I held software engineering internships in virtual reality research, SaaS, and investmant banking. 
+</li>
+	  <li>My passion is building user-centric software.  Whether using Java or Pyspark, speaking English or Mandarin, I do my best to break down difficult problems and create technical solutions. 
+</li>
+	</ul>  
 	</div>
 </body>
 </html>
