--- a/work.html
+++ b/work.html
@@ -1,1 +1,39 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+<title> Carina's Corner </title>
+<link rel="shortcut icon" type="image/x-icon" href="me.jpg" />
+<link rel="stylesheet" type="text/css" href="mystyle.css">	
+</head>
+<body>
+
+<div class="box"><img style="float: left; padding: 28px 50px 10px 50px;" src="profile.jpg" alt="" height="100px" />
+<div style="margin: 30px;">
+	<h1> Carina Corbin </h1>
+	 <p> Master's of Engineering Student at Cornell Tech, Class of 2021 </p>
+	 <p> carinabcorbin (at) gmail.com </p>
+</div>
+<div id="navigation"><a href="index.html">About</a> <a href="education.html">Education</a> <a href="work.html">Work Experience</a> <a href="interests.html">Interests</a></div>
+<div class="innerbox">
+<div class="row">
+  <div class="column"> 
+    <center> Amherst College </center>
+    <p> Major: Computer Science and Asian Languages and Civilizations</p>
+    <p> Programming Languages: Java, Pyton </p>
+    <p> Natural Languages: Mandarin Chinese, Korean </p>
+    <p> Extracurriculars: Editor-in-Chief/Campus Correspondent, Her Campus Amherst; Secretary (2015) Vice President (2016), Korean Student Association; Member, Women in CS </p>
+    <br>
+    <center> Cornell Tech, Cornell University </center>
+    <p> Master's of Engineering in Computer Science </p>
+    <p> Courses: Algorithms & Data Structures, Security and Privacy Concepts in the Wild, HCI and Design, Business Fundamentals, Digital Marketing </p>
+    <p> Extracurriculars: BreakThrough Tech Fellow; Cornell Tech Student Ambassador;  Web Coordinator for Cornell Institute for Healthy Futures; Merit Scholar Recipient </p>
+  </div>
+  <div class="column">
+  <img style="float: left; padding: 28px 50px 10px 50px;" src="graduaion.jpg" alt="" height="200px" />
+    <img style="float: left; padding: 28px 50px 10px 50px;" src="Cornell Tech.jpeg" alt="" height="200px" />
+  </div>
+</div>
+	</div>
+</body>
+</html>
 
